--- a/views/coasters/new-coaster.hbs
+++ b/views/coasters/new-coaster.hbs
@@ -8,32 +8,29 @@
 
     <div class="col-md-6">
 
-      <form action="" method="">
+      <form action="/create-coaster" method="POST">
         <div class="form-group">
-          <label for="name-input">Nombre</label>
-          <input name="" type="text" class="form-control" id="name-input">
+          <label for="name">Nombre</label>
+          <input name="name" type="text" class="form-control" id="name">
         </div>
         <div class="form-group">
           <label for="description-input">Descripción</label>
-          <input name="" type="text" class="form-control" id="description-input">
+          <input name="description" type="text" class="form-control" id="description">
         </div>
         <div class="form-group">
           <label for="inversions-input">Inversiones</label>
-          <input name="" type="number" class="form-control" id="inversions-input">
+          <input name="inversions" type="number" class="form-control" id="inversions">
         </div>
         <div class="form-group">
           <label for="length-input">Longitud</label>
-          <input name="" type="number" class="form-control" id="length-input">
+          <input name="length" type="number" class="form-control" id="length">
         </div>
         <div class="form-group">
           <label for="park-list">Parque en el que se encuentra:</label>
-          <select name="" class="form-control" id="park-list">
-            <option>Seleccionar</option>
-            <option value="">Parque</option>
-            <option value="">Parque</option>
-            <option value="">Parque</option>
-            <option value="">Parque</option>
-            <option value="">Parque</option>
+          <select name="park" class="form-control" id="park">
+            {{#each parkFound}}
+              <option value="{{_id}}">{{name}}</option>
+            {{/each}}
           </select>
         </div>
 
