--- a/views/parks/new-park.hbs
+++ b/views/parks/new-park.hbs
@@ -8,14 +8,14 @@
 
     <div class="col-md-6">
 
-      <form action="" method="">
+      <form action="/create-park" method="POST">
         <div class="form-group">
-          <label for="name-input">Nombre</label>
-          <input name="" type="text" class="form-control" id="name-input">
+          <label for="name">Nombre</label>
+          <input name="name" type="text" class="form-control" id="name">
         </div>
         <div class="form-group">
-          <label for="description-input">Descripción</label>
-          <input name="" type="text" class="form-control" id="description-input">
+          <label for="description">Descripción</label>
+          <input name="description" type="text" class="form-control" id="description">
         </div>
 
         <button type="submit" class="btn btn-dark">Crear parque</button>
